--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Immobilien Brak</title>
+    <meta name="viewport" content="width=device-width, initial scale=1.0">
+    <title>Immobili&euml;n Wyns</title>
+    <link rel="stylesheet" href="css/Basis.css">
 </head>
 <body>
-<p>Test</p>
+<header>
+    <a href="index.html">
+        <img id="logo" src="images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+    </a>
+    <h1>Immobili&euml;n Wyns</h1>
+</header>
+
+
+<footer>
+
+</footer>
 </body>
 </html>
