--- a/html/Contact.html
+++ b/html/Contact.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
+    <link rel="stylesheet" href="../css/Basis.css">
 </head>
 <body>
+<header>
+    <a href="../index.html">
+        <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+    </a>
+    <h1>Immobili&euml;n Wyns</h1>
+</header>
+
+<nav class="navigatie">
+    <a href="../index.html">Home</a>
+    <a href="Verhuur.html">Verhuur</a>
+    <a href="Verkoop.html">Verkoop</a>
+    <a href="Contact.html">Contact</a>
+</nav>
+
+<main>
+
+</main>
 
 </body>
 </html>
