--- a/index.html
+++ b/index.html
@@ -12,11 +12,47 @@
         <img id="logo" src="images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
+    <div></div>
 </header>
 
+<nav class="navigatie">
+    <a href="index.html">Home</a>
+    <a href="html/Verhuur.html">Verhuur</a>
+    <a href="html/Verkoop.html">Verkoop</a>
+    <a href="html/Contact.html">Contact</a>
+</nav>
 
-<footer>
+<main>
+    <picture>
+        <source media="(min-width: 700px)" srcset="images/header.jpg">
+        <img src="images/header.jpg" alt="Foto's van huizen aan de kust" width="1024" height="286">
+    </picture>
+</main>
+
+<footer id="footer">
+
+    <nav class="rij">
+        <nav class="kolom">
+            <h2>Contact</h2>
+            <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
+        </nav>
+        <nav class="kolom">
+            <h2>Navigatie</h2>
+            <nav class="navigatie-verticaal">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="html/Verhuur.html">Verhuur</a></li>
+                    <li><a href="html/Verkoop.html">Verkoop</a></li>
+                    <li><a href="html/Contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </nav>
+        <nav class="kolom">
+            <h2>Openingsuren</h2>
+        </nav>
+    </nav>
 
 </footer>
+
 </body>
 </html>
