Added pages and content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial scale=1.0">
     <title>Immobili&euml;n Wyns</title>
     <link rel="stylesheet" href="css/Basis.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" sizes="16x16">
 </head>
 <body>
 <header>
@@ -30,11 +31,12 @@
 </main>
 
 <footer id="footer">
-
     <nav class="rij">
         <nav class="kolom">
             <h2>Contact</h2>
             <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
+            <p>Pylyserlaan 112,</p>
+            <p>8670 Koksijde</p>
         </nav>
         <nav class="kolom">
             <h2>Navigatie</h2>
@@ -49,6 +51,10 @@
         </nav>
         <nav class="kolom">
             <h2>Openingsuren</h2>
+            <p>Maandag: gesloten</p>
+            <p>Dinsdag - Vrijdag: 9 - 16u</p>
+            <p>Zaterdag: 8 - 18u</p>
+            <p>Zondag: Gesloten</p>
         </nav>
     </nav>
 
