--- a/html/Contact.html
+++ b/html/Contact.html
@@ -11,6 +11,7 @@
         <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
+    <div></div>
 </header>
 
 <nav class="navigatie">
@@ -21,7 +22,33 @@
 </nav>
 
 <main>
+    <section>
+        <h2>Nog vragen?</h2>
+        <p>Is er toch nog iets dat we voor u kunnen doen? Nog enige onduidelijkheid over een bepaald pand? Voor meer
+            informatie kunt u ons altijd contacteren via onderstaand formulier</p>
+        <br>
 
+        <form action="ContactComplete.html">
+            Voornaam: <br>
+            <input type="text" name="voornaam"><br>
+            Achternaam:<br>
+            <input type="text" name="achternaam"><br>
+            Telefoon: <br>
+            <input type="text" name="telefoon"><br>
+            Email adres: <br>
+            <input type="text" name="email"><br>
+            Bericht: <br>
+            <input type="text" name="bericht"><br>
+            Hoe wenst u bereikt te worden?<br>
+            <input type="radio" name="contact" value="telefoon" checked>Telefonisch<br>
+            <input type="radio" name="contact" value="email">Via mail<br>
+            <input type="submit" value="Verzend">
+        </form>
+    </section>
+    <section>
+        <h2>Hoe te bereiken?</h2>
+        <p>U bent natuurlijk ook altijd welkom om eens binnen te springen voor een vrijblevend gesprek met onze immo-experts.</p>
+    </section>
 </main>
 
 </body>
