--- a/html/Verhuur.html
+++ b/html/Verhuur.html
@@ -11,6 +11,7 @@
         <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
+    <div></div>
 </header>
 
 <nav class="navigatie">
@@ -21,7 +22,20 @@
 </nav>
 
 <main>
-
+    <div class="rij">
+        <div class="vKolom">
+            <p>Test</p>
+        </div>
+        <div class="vKolom">
+            <p> Test 2</p>
+        </div>
+        <div class="vKolom">
+            <p>test 3</p>
+        </div>
+        <div class="vKolom">
+            <p>test 4</p>
+        </div>
+    </div>
 </main>
 
 </body>
