--- a/html/Verkoop.html
+++ b/html/Verkoop.html
@@ -12,6 +12,7 @@
         <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
     <h1>Immobili&euml;n Wyns</h1>
+    <div></div>
 </header>
 
 <nav class="navigatie">
