--- a/html/VerkoopFiltered.html
+++ b/html/VerkoopFiltered.html
@@ -5,6 +5,13 @@
     <title>Verkoop (Gefilterd)</title>
 </head>
 <body>
+<header>
+    <a href="../index.html">
+        <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
+    </a>
+    <h1>Immobili&euml;n Wyns</h1>
+    <div></div>
+</header>
 
 </body>
 </html>
