Updated page layouts, worked on Contact page

--- a/html/VerkoopFiltered.html
+++ b/html/VerkoopFiltered.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Verkoop (Gefilterd)</title>
+    <link rel="stylesheet" href="../css/Basis.css">
 </head>
 <body>
-<header>
+<header class="limited">
     <a href="../index.html">
         <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
@@ -13,5 +14,44 @@
     <div></div>
 </header>
 
+<nav class="navigatie">
+    <section class="limited">
+        <a href="../index.html" id="navFirst">Home</a>
+        <a href="Verhuur.html">Verhuur</a>
+        <a href="Verkoop.html">Verkoop</a>
+        <a href="Contact.html">Contact</a>
+    </section>
+</nav>
+
+<footer>
+    <aside class="footer">
+        <nav class="rij">
+            <nav class="kolom">
+                <h2>Contact</h2>
+                <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
+                <p>Pylyserlaan 112,</p>
+                <p>8670 Koksijde</p>
+            </nav>
+            <nav class="kolom">
+                <h2>Navigatie</h2>
+                <nav class="navigatie-verticaal">
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../html/Verhuur.html">Verhuur</a></li>
+                        <li><a href="../html/Verkoop.html">Verkoop</a></li>
+                        <li><a href="../html/Contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </nav>
+            <nav class="kolom">
+                <h2>Openingsuren</h2>
+                <p>Maandag: gesloten</p>
+                <p>Dinsdag - Vrijdag: 9 - 16u</p>
+                <p>Zaterdag: 8 - 18u</p>
+                <p>Zondag: Gesloten</p>
+            </nav>
+        </nav>
+    </aside>
+</footer>
 </body>
 </html>
