--- a/html/Contact.html
+++ b/html/Contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/Basis.css">
 </head>
 <body>
-<header>
+<header class="limited">
     <a href="../index.html">
         <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
@@ -15,41 +15,102 @@
 </header>
 
 <nav class="navigatie">
-    <a href="../index.html">Home</a>
-    <a href="Verhuur.html">Verhuur</a>
-    <a href="Verkoop.html">Verkoop</a>
-    <a href="Contact.html">Contact</a>
+    <section class="limited">
+        <a href="../index.html" id="navFirst">Home</a>
+        <a href="Verhuur.html">Verhuur</a>
+        <a href="Verkoop.html">Verkoop</a>
+        <a href="Contact.html">Contact</a>
+    </section>
 </nav>
 
-<main>
-    <section>
+<main class="limited">
+        <section>
         <h2>Nog vragen?</h2>
         <p>Is er toch nog iets dat we voor u kunnen doen? Nog enige onduidelijkheid over een bepaald pand? Voor meer
             informatie kunt u ons altijd contacteren via onderstaand formulier</p>
         <br>
-
         <form action="ContactComplete.html">
-            Voornaam: <br>
-            <input type="text" name="voornaam"><br>
-            Achternaam:<br>
-            <input type="text" name="achternaam"><br>
-            Telefoon: <br>
-            <input type="text" name="telefoon"><br>
-            Email adres: <br>
-            <input type="text" name="email"><br>
-            Bericht: <br>
-            <input type="text" name="bericht"><br>
+            <label>
+                Voornaam: <br>
+                <input class="contactI" type="text" name="voornaam">
+            </label><br>
+            <label>
+                Achternaam <br>
+                <input class="contactI" type="text" name="achternaam">
+            </label><br>
+            <label>
+                Telefoon: <br>
+                <input class="contactI" type="text" name="telefoon">
+            </label><br>
+            <label>
+                Email adres: <br>
+                <input class="contactI" type="text" name="email">
+            </label><br>
+            <label for="berichtVeld">
+                Bericht: <br>
+            </label>
+            <textarea class="contactI" name="bericht" id="berichtVeld" cols="60" rows="10"></textarea> <br>
             Hoe wenst u bereikt te worden?<br>
-            <input type="radio" name="contact" value="telefoon" checked>Telefonisch<br>
-            <input type="radio" name="contact" value="email">Via mail<br>
-            <input type="submit" value="Verzend">
+            <label class="cRB">
+                <input type="radio" name="contact" value="telefoon" checked>
+                Telefonisch
+            </label><br>
+            <label class="cRB">
+                <input type="radio" name="contact" value="email">
+                Via email
+            </label> <br>
+            <input type="submit" value="Verzend" class="button">
         </form>
     </section>
     <section>
         <h2>Hoe te bereiken?</h2>
-        <p>U bent natuurlijk ook altijd welkom om eens binnen te springen voor een vrijblevend gesprek met onze immo-experts.</p>
+        <img id="gevelFoto" src="../images/fotoGevel.png" alt="Foto van de voorkant van ons filiaal" width="500" height="300">
+        <section id="contactInfo">
+            <p>U bent natuurlijk ook altijd welkom om eens binnen te springen voor een vrijblevend gesprek met onze immo-experts.</p>
+            <strong>Pylyserlaan 112
+                8670 Koksijde
+            </strong>
+        </section>
+        <div class="endFloat"></div>
+        <section class="oUren">
+            <h2>Openingsuren</h2>
+            <p>Maandag: gesloten</p>
+            <p>Dinsdag - Vrijdag: 9 - 16u</p>
+            <p>Zaterdag: 8 - 18u</p>
+            <p>Zondag: Gesloten</p>
+        </section>
+
     </section>
 </main>
-
+<footer>
+    <aside class="footer">
+        <nav class="rij">
+            <nav class="kolom">
+                <h2>Contact</h2>
+                <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
+                <p>Pylyserlaan 112,</p>
+                <p>8670 Koksijde</p>
+            </nav>
+            <nav class="kolom">
+                <h2>Navigatie</h2>
+                <nav class="navigatie-verticaal">
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../html/Verhuur.html">Verhuur</a></li>
+                        <li><a href="../html/Verkoop.html">Verkoop</a></li>
+                        <li><a href="../html/Contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </nav>
+            <nav class="kolom">
+                <h2>Openingsuren</h2>
+                <p>Maandag: gesloten</p>
+                <p>Dinsdag - Vrijdag: 9 - 16u</p>
+                <p>Zaterdag: 8 - 18u</p>
+                <p>Zondag: Gesloten</p>
+            </nav>
+        </nav>
+    </aside>
+</footer>
 </body>
 </html>
