--- a/html/Verhuur.html
+++ b/html/Verhuur.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/Basis.css">
 </head>
 <body>
-<header>
+<header class="limited">
     <a href="../index.html">
         <img id="logo" src="../images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
@@ -15,28 +15,95 @@
 </header>
 
 <nav class="navigatie">
-    <a href="../index.html">Home</a>
-    <a href="Verhuur.html">Verhuur</a>
-    <a href="Verkoop.html">Verkoop</a>
-    <a href="Contact.html">Contact</a>
+    <section class="limited">
+        <a href="../index.html" id="navFirst">Home</a>
+        <a href="Verhuur.html">Verhuur</a>
+        <a href="Verkoop.html">Verkoop</a>
+        <a href="Contact.html">Contact</a>
+    </section>
 </nav>
 
 <main>
-    <div class="rij">
-        <div class="vKolom">
-            <p>Test</p>
-        </div>
-        <div class="vKolom">
-            <p> Test 2</p>
-        </div>
-        <div class="vKolom">
-            <p>test 3</p>
-        </div>
-        <div class="vKolom">
-            <p>test 4</p>
-        </div>
-    </div>
-</main>
+    <article class="limited">
+        <section class="rij">
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="180" height="130" >
+                        <h2>Villa</h2><p>&euro; 920</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="180" height="130">
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="180" height="130">
+                    <h2>Villa</h2><p>&euro; 920</p>
 
+
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="180" height="130">
+                    <h2>Villa</h2><p>&euro; 920</p>
+
+
+                </section>
+            </section>
+        </section>
+        <div class="rij">
+            <div class="vKolom">
+                <p>Test</p>
+            </div>
+            <div class="vKolom">
+                <p> Test 2</p>
+            </div>
+            <div class="vKolom">
+                <p>test 3</p>
+            </div>
+            <div class="vKolom">
+                <section>
+                    <h2>Garage</h2><p>&euro; 60</p>
+                </section>
+            </div>
+        </div>
+    </article>
+</main>
+<footer>
+    <aside class="footer">
+        <nav class="rij">
+            <nav class="kolom">
+                <h2>Contact</h2>
+                <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
+                <p>Pylyserlaan 112,</p>
+                <p>8670 Koksijde</p>
+            </nav>
+            <nav class="kolom">
+                <h2>Navigatie</h2>
+                <nav class="navigatie-verticaal">
+                    <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../html/Verhuur.html">Verhuur</a></li>
+                        <li><a href="../html/Verkoop.html">Verkoop</a></li>
+                        <li><a href="../html/Contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </nav>
+            <nav class="kolom">
+                <h2>Openingsuren</h2>
+                <p>Maandag: gesloten</p>
+                <p>Dinsdag - Vrijdag: 9 - 16u</p>
+                <p>Zaterdag: 8 - 18u</p>
+                <p>Zondag: Gesloten</p>
+            </nav>
+        </nav>
+    </aside>
+</footer>
 </body>
 </html>
