--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" sizes="16x16">
 </head>
 <body>
-<header>
+<header class="limited">
     <a href="index.html">
         <img id="logo" src="images/Logo.png" alt="Het logo van immobilienkantoor Wyns" width="250" height="80">
     </a>
@@ -17,47 +17,50 @@
 </header>
 
 <nav class="navigatie">
-    <a href="index.html">Home</a>
-    <a href="html/Verhuur.html">Verhuur</a>
-    <a href="html/Verkoop.html">Verkoop</a>
-    <a href="html/Contact.html">Contact</a>
+    <section class="limited">
+        <a href="index.html" id="navFirst">Home</a>
+        <a href="html/Verhuur.html">Verhuur</a>
+        <a href="html/Verkoop.html">Verkoop</a>
+        <a href="html/Contact.html">Contact</a>
+    </section>
 </nav>
 
-<main>
+<main class="limited">
     <picture>
         <source media="(min-width: 700px)" srcset="images/header.jpg">
         <img src="images/header.jpg" alt="Foto's van huizen aan de kust" width="1024" height="286">
     </picture>
 </main>
 
-<footer id="footer">
-    <nav class="rij">
-        <nav class="kolom">
-            <h2>Contact</h2>
-            <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
-            <p>Pylyserlaan 112,</p>
-            <p>8670 Koksijde</p>
-        </nav>
-        <nav class="kolom">
-            <h2>Navigatie</h2>
-            <nav class="navigatie-verticaal">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="html/Verhuur.html">Verhuur</a></li>
-                    <li><a href="html/Verkoop.html">Verkoop</a></li>
-                    <li><a href="html/Contact.html">Contact</a></li>
-                </ul>
+<footer>
+    <aside class="footer">
+        <nav class="rij">
+            <nav class="kolom">
+                <h2>Contact</h2>
+                <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
+                <p>Pylyserlaan 112,</p>
+                <p>8670 Koksijde</p>
+            </nav>
+            <nav class="kolom">
+                <h2>Navigatie</h2>
+                <nav class="navigatie-verticaal">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="html/Verhuur.html">Verhuur</a></li>
+                        <li><a href="html/Verkoop.html">Verkoop</a></li>
+                        <li><a href="html/Contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </nav>
+            <nav class="kolom">
+                <h2>Openingsuren</h2>
+                <p>Maandag: gesloten</p>
+                <p>Dinsdag - Vrijdag: 9 - 16u</p>
+                <p>Zaterdag: 8 - 18u</p>
+                <p>Zondag: Gesloten</p>
             </nav>
         </nav>
-        <nav class="kolom">
-            <h2>Openingsuren</h2>
-            <p>Maandag: gesloten</p>
-            <p>Dinsdag - Vrijdag: 9 - 16u</p>
-            <p>Zaterdag: 8 - 18u</p>
-            <p>Zondag: Gesloten</p>
-        </nav>
-    </nav>
-
+    </aside>
 </footer>
 
 </body>
