Master page, other changes

--- a/html/Verkoop.html
+++ b/html/Verkoop.html
@@ -23,8 +23,159 @@
         <a href="Contact.html">Contact</a>
     </section>
 </nav>
-
 <main>
+
+    <section class="vFilter limited">
+        <label for="sFilterSlpk">Filters:</label>
+        <select name="slpkFilter" id="sFilterSlpk">
+            <option value="1 Slaapkamer">1 Slaapkamer</option>
+            <option value="2 Slaapkamers">2 Slaapkamers</option>
+            <option value="3 Slaapkamers">3 Slaapkamers</option>
+            <option value="4+ Slaapkamers">4+ Slaapkamers</option>
+        </select>
+        <label for="sFilterPrijs"></label>
+        <select name="prijsFilter" id="sFilterPrijs">
+            <option value="< 250">< &euro;249</option>
+            <option value="250-500">&euro;250 - &euro;499</option>
+            <option value="500-750">&euro;500 - &euro;749</option>
+            <option value="750+">> &euro;750</option>
+        </select>
+        <label for="sFilterVerhuur"></label>
+        <select name="sFilterTypeV" id="sFilterVerhuur">
+            <option value="weekend">Weekend</option>
+            <option value="midweek">Midweek</option>
+            <option value="Maand">Maand</option>
+            <option value="Jaar">Jaar</option>
+        </select>
+
+        <a href="VerhuurFiltered.html">
+            <button id="vFilterBtn">Zoek</button>
+        </a>
+    </section>
+
+    <article class="limited">
+        <section class="rij">
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                        <h2>Villa</h2><p>&euro; 920</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+
+
+                </section>
+            </section>
+        </section>
+        <section class="rij">
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                        <h2>Villa</h2><p>&euro; 920</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+
+
+                </section>
+            </section>
+        </section>
+        <section class="rij">
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                        <h2>Villa</h2><p>&euro; 920</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+
+
+                </section>
+            </section>
+        </section>
+        <section class="rij">
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                        <h2>Villa</h2><p>&euro; 920</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/Villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <h2>Villa</h2><p>&euro; 920</p>
+
+
+                </section>
+            </section>
+        </section>
+
+    </article>
 
 </main>
 <footer>
