Added images, blank pages for 3 links, semi-fixed responsiveness

--- a/html/verhuur.html
+++ b/html/verhuur.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Verkoop</title>
     <link rel="stylesheet" href="../css/basis.css">
-    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" >
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../css/verkoopverhuur.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 <header class="limited">
@@ -26,9 +27,10 @@
 </nav>
 
 <main>
-    <section class="vFilter limited">
+    <aside class="vFilter limited">
         <label for="sFilterSlpk">Filters:</label>
         <select name="slpkFilter" id="sFilterSlpk">
+            <option value="Geen slaapkamers">Geen slaapkamers</option>
             <option value="1 Slaapkamer">1 Slaapkamer</option>
             <option selected value="2 Slaapkamers">2 Slaapkamers</option>
             <option value="3 Slaapkamers">3 Slaapkamers</option>
@@ -54,14 +56,15 @@
             <button id="vFilterBtn">Zoek
             </button>
         </a>
-    </section>
+    </aside>
 
     <article class="limited">
         <section class="rij">
             <section class="vKolom">
                 <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                    <a href="villa1.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa"
+                             width="205"
                              height="140">
                         <h2>Villa</h2>
                         <p>&euro; 920</p>
@@ -70,98 +73,35 @@
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
-                         height="140">
-                    <h2>Villa</h2>
-                    <p>&euro; 920</p>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
-                         height="140">
-                    <h2>Villa</h2>
-                    <p>&euro; 920</p>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
-                         height="140">
-                    <h2>Villa</h2>
-                    <p>&euro; 920</p>
-                </section>
-            </section>
-        </section>
-        <section class="rij">
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                    <a href="huis1.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/huis3.jpg" alt="Foto van een vrijstaand huis met garage"
+                             width="205"
                              height="140">
-                        <h2>Villa</h2>
-                        <p>&euro; 920</p>
+                        <h2>Huis</h2>
+                        <p>&euro; 700</p>
                     </a>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
-                         height="140">
-                    <h2>Villa</h2>
-                    <p>&euro; 920</p>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
-                         height="140">
-                    <h2>Villa</h2>
-                    <p>&euro; 920</p>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
-                         height="140">
-                    <h2>Villa</h2>
-                    <p>&euro; 920</p>
-                </section>
-            </section>
-        </section>
-        <section class="rij">
-            <section class="vKolom">
-                <section class="vBlock">
-                    <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
+                    <a href="huis2.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/huis4.png"
+                             alt="Foto van een ingesloten huis" width="205"
                              height="140">
-                        <h2>Villa</h2>
-                        <p>&euro; 920</p>
+                        <h2>Huis</h2>
+                        <p>&euro; 650</p>
                     </a>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
-                         height="140">
-                    <h2>Villa</h2>
-                    <p>&euro; 920</p>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205"
-                         height="140">
-                    <h2>Villa</h2>
-                    <p>&euro; 920</p>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/garagebox1.jpg"
-                         alt="Foto van twee garageboxen, 1 met open deur" width="205" height="140">
-                    <h2>Garagebox</h2>
-                    <p>&euro; 60</p>
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/appartement1.png"
+                             alt="Foto van een appartement" width="205"
+                             height="140">
+                        <h2>Appartement</h2>
+                        <p>&euro; 640</p>
+                    </a>
                 </section>
             </section>
         </section>
@@ -169,7 +109,53 @@
             <section class="vKolom">
                 <section class="vBlock">
                     <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/garagebox2.jpg"
+                        <img class="vImg" src="../images/Verhuur/thumbnails/appartement2.png" alt="Foto van een appartement"
+                             width="205"
+                             height="140">
+                        <h2>Appartement</h2>
+                        <p>&euro; 600</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/appartement3.png" alt="Foto van een appartement"
+                             width="205"
+                             height="140">
+                        <h2>Appartement</h2>
+                        <p>&euro; 440</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/appartement4.jpg" alt="Foto van een appartement"
+                             width="205"
+                             height="140">
+                        <h2>Appartement</h2>
+                        <p>&euro; 400</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/garagebox1.jpg"
+                             alt="Foto van een rij garageboxen" width="205"
+                             height="140">
+                        <h2>Garagebox</h2>
+                        <p>&euro; 50</p>
+                    </a>
+                </section>
+            </section>
+        </section>
+        <section class="rij">
+            <section class="vKolom">
+                <section class="vBlock">
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/garagebox2.jpg"
                              alt="Foto van vier garageboxen op een rij" width="205" height="140">
                         <h2>Garagebox</h2>
                         <p>&euro; 40</p>
@@ -178,10 +164,13 @@
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/garagebox3.jpg"
-                         alt="Foto van een reeks garagebox" width="205" height="140">
-                    <h2>Garagebox</h2>
-                    <p>&euro; 30</p>
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/garagebox3.jpg" alt="Foto van een villa"
+                             width="205"
+                             height="140">
+                        <h2>Garagebox</h2>
+                        <p>&euro; 35</p>
+                    </a>
                 </section>
             </section>
             <section class="vKolom">
