Added images, blank pages for 3 links, semi-fixed responsiveness

--- a/html/contact.html
+++ b/html/contact.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/basis.css">
     <link rel="stylesheet" href="../css/contact.css">
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 <header class="limited">
@@ -66,7 +67,7 @@
     </section>
     <section>
         <h2>Hoe te bereiken?</h2>
-        <img id="gevelFoto" src="../images/fotoGevel.png" alt="Foto van de voorkant van ons filiaal" width="500"
+        <img id="gevelFoto" src="../images/fotogevel.png" alt="Foto van de voorkant van ons filiaal" width="500"
              height="300">
         <section id="contactInfo">
             <p>U bent natuurlijk ook altijd welkom om eens binnen te springen voor een vrijblevend gesprek met onze
