--- a/html/verkoop.html
+++ b/html/verkoop.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/basis.css">
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../css/verkoopverhuur.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 
@@ -60,26 +61,28 @@
             <section class="vKolom">
                 <section class="vBlock">
                     <a href="../index.html">
-                        <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                        <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
                         <h2>Villa</h2><p>&euro; 920</p>
                     </a>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <a href="../index.html">
+                        <img class="vImg" src="../images/Verhuur/thumbnails/villa2.jpg" alt="Foto van een villa" width="205" height="140" >
+                        <h2>Villa</h2><p>&euro; 890</p>
+                    </a>
+                </section>
+            </section>
+            <section class="vKolom">
+                <section class="vBlock">
+                    <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
                     <h2>Villa</h2><p>&euro; 920</p>
                 </section>
             </section>
             <section class="vKolom">
                 <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
-                    <h2>Villa</h2><p>&euro; 920</p>
-                </section>
-            </section>
-            <section class="vKolom">
-                <section class="vBlock">
-                    <img class="vImg" src="../images/Verhuur/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
+                    <img class="vImg" src="../images/Verhuur/thumbnails/villa1.JPG" alt="Foto van een villa" width="205" height="140" >
                     <h2>Villa</h2><p>&euro; 920</p>
 
 
