--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         <source media="(min-width: 700px)" srcset="images/header.jpg">
         <img src="images/header.jpg" alt="Foto's van huizen aan de kust" width="1024" height="286">
     </picture>
+
+    <h2>
+        Immobili&euml;n kantoor Wyns, al meer dan 10 jaar tot uw dienst.
+    </h2>
+    <p>
+        Bij Immobili&euml;n Wyns kan u zeker zijn van uw zaak, of u nu een apartement, vakantiewoning of garage zoekt,
+        wij kunnen u altijd van dienst zijn. Bij ons staan er 8 experts klaar om u persoonlijk te begeleiden, wat uw wensen ook zijn.
+        Aarzel niet, neem gerust een kijkje op onze website of kom eens langs voor een gesprek en een kop koffie.
+    </p>
 </main>
 
 <footer>
