--- a/html/villa1.html
+++ b/html/villa1.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
-    <title>Verkoop (Gefilterd)</title>
+    <title>Villa 1</title>
     <link rel="stylesheet" href="../css/basis.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -23,6 +23,10 @@
         <a href="contact.html">Contact</a>
     </section>
 </nav>
+
+<main>
+
+</main>
 
 <footer>
     <aside class="footer">
