--- a/html/contactComplete.html
+++ b/html/contactComplete.html
@@ -25,8 +25,8 @@
     </section>
 </nav>
 
-<main>
-    <h1>
+<main class="limited">
+    <h1 id="bevestiging">
         U boodschap is bij ons aangekomen, een medewerker neemt zo snel mogelijk contact met u op
     </h1>
     <a href="../index.html">
@@ -38,13 +38,13 @@
 <footer>
     <aside class="footer">
         <nav class="rij">
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
                 <p>Pylyserlaan 112,</p>
                 <p>8670 Koksijde</p>
             </nav>
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
                     <ul>
@@ -55,7 +55,7 @@
                     </ul>
                 </nav>
             </nav>
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Openingsuren</h2>
                 <p>Maandag: gesloten</p>
                 <p>Dinsdag - Vrijdag: 9 - 16u</p>
