--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 <footer>
     <aside class="footer">
         <nav class="rij">
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
                 <p>Pylyserlaan 112,</p>
                 <p>8670 Koksijde</p>
             </nav>
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
                     <ul>
@@ -61,7 +61,7 @@
                     </ul>
                 </nav>
             </nav>
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Openingsuren</h2>
                 <p>Maandag: gesloten</p>
                 <p>Dinsdag - Vrijdag: 9 - 16u</p>
