--- a/html/villa1.html
+++ b/html/villa1.html
@@ -5,6 +5,7 @@
     <title>Villa 1</title>
     <link rel="stylesheet" href="../css/basis.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="../css/detail.css">
 </head>
 <body>
 <header class="limited">
@@ -25,19 +26,60 @@
 </nav>
 
 <main>
+    <article class="limited">
+        <h1>Moderne villa op 1km van het strand</h1>
 
+        <section class="rij2KolomOngelijk">
+            <img id="hoofdfoto" src="../images/Verhuur/fullsize/villa1ext.jpg" alt="Een foto van een villa" width="480" height="360">
+
+            <section class="kolom33 description">
+                <h2>&euro;920 / maand</h2>
+                <h3>4 slaapkamers, 3 parkeerplaatsen, 2 badkamers, open haard</h3>
+
+                <ul>Te huren op basis van
+                    <li>Maandverhuur</li>
+                    <li>Weekverhuur</li>
+                    <li>Midweekverhuur</li>
+                </ul>
+
+            </section>
+
+        </section>
+
+        <section class="rij3KolomGelijk">
+            <section class="kolom33">
+                <h3>Beschrijving</h3>
+                <p>Gezellige bemeubelde moderne villa, dicht gelegen bij het strand van oostende. en lult nogwa meer
+                </p>
+            </section>
+            <section class="kolom33">
+                <h3>Specificaties</h3>
+                <ul>
+                    <li>Living met open haard</li>
+                    <li>2 badkamers + 1 toilet</li>
+                    <li>4 slaapkamers</li>
+                    <li>Grote keuken</li>
+                    <li>Ruime inkomhal</li>
+                </ul>
+            </section>
+            <section class="kolom33">
+                <h3>Adres</h3>
+                <p>Spalaan 18, 8400 Koksijde</p>
+            </section>
+        </section>
+    </article>
 </main>
 
 <footer>
     <aside class="footer">
         <nav class="rij">
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
                 <p>Pylyserlaan 112,</p>
                 <p>8670 Koksijde</p>
             </nav>
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Navigatie</h2>
                 <nav class="navigatie-verticaal">
                     <ul>
@@ -48,7 +90,7 @@
                     </ul>
                 </nav>
             </nav>
-            <nav class="kolom">
+            <nav class="kolom33">
                 <h2>Openingsuren</h2>
                 <p>Maandag: gesloten</p>
                 <p>Dinsdag - Vrijdag: 9 - 16u</p>
