--- a/html/verkoop.html
+++ b/html/verkoop.html
@@ -57,7 +57,7 @@
     </section>
 
     <article class="limited">
-        <section class="rij">
+        <section class="rij4KolomGelijk">
             <section class="vKolom">
                 <section class="vBlock">
                     <a href="../index.html">
