--- a/html/villa1.html
+++ b/html/villa1.html
@@ -72,7 +72,7 @@
 
 <footer>
     <aside class="footer">
-        <nav class="rij">
+        <nav class="rij3KolomGelijk">
             <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
