Auto stash before merge of "master" and "origin/master"

--- a/html/huis2.html
+++ b/html/huis2.html
@@ -15,7 +15,7 @@
     <div></div>
 </header>
 
-<nav class="navigatie">
+<nav class="navigatie, limited">
     <section class="limited">
         <a href="../index.html" id="navFirst">Home</a>
         <a href="verhuur.html">Verhuur</a>
