--- a/html/huis1.html
+++ b/html/huis1.html
@@ -5,6 +5,7 @@
     <title>Huis 1</title>
     <link rel="stylesheet" href="../css/basis.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="../css/detail.css">
 </head>
 <body>
 <header class="limited">
@@ -25,12 +26,54 @@
 </nav>
 
 <main>
+    <article class="limited">
+        <h1>Moderne villa op 1km van het strand</h1>
 
+        <section class="rij2KolomOngelijk">
+            <img id="hoofdfoto" src="../images/Verhuur/fullsize/Huis3.jpg" alt="Een foto van een vrijstaand wit huis" width="480" height="360">
+
+            <section class="kolom33 description">
+                <h2>&euro;700 / maand</h2>
+                <h3>4 slaapkamers, 3 parkeerplaatsen, 2 badkamers, open haard</h3>
+
+                <ul>Te huren op basis van
+                    <li>Maandverhuur</li>
+                    <li>Weekverhuur</li>
+                    <li>Midweekverhuur</li>
+                    <li>Jaarverhuur</li>
+                </ul>
+
+            </section>
+
+        </section>
+
+        <section class="rij3KolomGelijk">
+            <section class="kolom33">
+                <h3>Beschrijving</h3>
+                <p>Gezellige bemeubelde moderne villa, dicht gelegen bij het strand van oostende. en lult nogwa meer
+                </p>
+            </section>
+            <section class="kolom33">
+                <h3>Specificaties</h3>
+                <ul>
+                    <li>Living met open haard</li>
+                    <li>2 badkamers + 1 toilet</li>
+                    <li>4 slaapkamers</li>
+                    <li>Grote keuken</li>
+                    <li>Ruime inkomhal</li>
+                </ul>
+            </section>
+            <section class="kolom33">
+                <h3>Adres</h3>
+                <p>Spalaan 18, 8400 Koksijde</p>
+            </section>
+        </section>
+    </article>
 </main>
 
 <footer>
     <aside class="footer">
-        <nav class="rij">
+        <nav class="rij3KolomGelijk">
             <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
