--- a/html/huis2.html
+++ b/html/huis2.html
@@ -5,6 +5,7 @@
     <title>Huis 2</title>
     <link rel="stylesheet" href="../css/basis.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="../css/detail.css">
 </head>
 <body>
 <header class="limited">
@@ -15,7 +16,7 @@
     <div></div>
 </header>
 
-<nav class="navigatie, limited">
+<nav class="navigatie">
     <section class="limited">
         <a href="../index.html" id="navFirst">Home</a>
         <a href="verhuur.html">Verhuur</a>
@@ -25,12 +26,53 @@
 </nav>
 
 <main>
+    <article class="limited">
+        <h1>Ingesloten woning in het centrum van Koksijde</h1>
 
+        <section class="rij2KolomOngelijk">
+            <img id="hoofdfoto" src="../images/Verhuur/fullsize/Huis4.png" alt="Een foto van een ingesloten huis" width="480"
+                 height="360">
+
+            <section class="kolom33 description">
+                <h2>&euro;650 / maand</h2>
+                <h3>2 slaapkamers, 1 parkeerplaats, ruime keuken</h3>
+
+                <ul>Te huren op basis van
+                    <li>Maandverhuur</li>
+                    <li>Jaarverhuur</li>
+                </ul>
+
+            </section>
+
+        </section>
+
+        <section class="rij3KolomGelijk">
+            <section class="kolom33">
+                <h3>Beschrijving</h3>
+                <p>Gerenoveerde ingesloten bebouwing,
+                </p>
+            </section>
+            <section class="kolom33">
+                <h3>Specificaties</h3>
+                <ul>
+                    <li>Living met open haard</li>
+                    <li>2 badkamers + 1 toilet</li>
+                    <li>4 slaapkamers</li>
+                    <li>Grote keuken</li>
+                    <li>Ruime inkomhal</li>
+                </ul>
+            </section>
+            <section class="kolom33">
+                <h3>Adres</h3>
+                <p>Spalaan 18, 8400 Koksijde</p>
+            </section>
+        </section>
+    </article>
 </main>
 
 <footer>
     <aside class="footer">
-        <nav class="rij">
+        <nav class="rij3KolomGelijk">
             <nav class="kolom33">
                 <h2>Contact</h2>
                 <a id="mailto" href="mailto:contact@immowyns.be">contact@immowyns.be</a>
