--- a/html/contact.html
+++ b/html/contact.html
@@ -51,6 +51,8 @@
                         Email adres: <br>
                         <input class="contactI" type="text" name="email">
                     </label><br>
+                    <br>
+                    Hoe wenst u bereikt te worden?<br>
                     <label class="cRB">
                         <input type="radio" name="contact" value="telefoon" checked>
                         Telefonisch
@@ -66,13 +68,11 @@
                 <label for="berichtVeld">
                     Bericht: <br>
                 </label>
-                <textarea class="contactI" name="bericht" id="berichtVeld" cols="60" rows="10"></textarea> <br>
-                Hoe wenst u bereikt te worden?<br>
+                <textarea class="contactI" name="bericht" id="berichtVeld" cols="60" rows="10"></textarea>
             </section>
         </section>
-
-
     </section>
+
     <section>
         <h2>Hoe te bereiken?</h2>
         <img id="gevelFoto" src="../images/fotogevel.png" alt="Foto van de voorkant van ons filiaal" width="500"
